package com.dgusev.sprint3.deviceservice.dto;

public enum DeviceType {
    HEATING,
    GATE,
    CAMERA,
    LIGHT
}
